Updates with TA positions

--- a/Help.html
+++ b/Help.html
@@ -37,7 +37,8 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <p style="font-size:20px;">AP Calculus BC, Multivariabe Calculus, Differential Equations, Complex Analysis, <br>AP Physics C Mechanics, AP Physics C Electricity and Magnetism,
         Artificial Intelligence, <br> Web App Design, Mobile App Design, AP Economics </p>
         <h3>Other Info:</h3>
-    <ul style="font-size:20px;"><li>3 year Varsity Basketball Player, captian Senior year</li><li>Created a program that allowed for advanced statistics on basketball games to be kept, like best lineups in terms of plus minus</li>Vice President of Future Business Leaders of America<li>Helped create a Science program where students from a local middle school would participate in fun Stem projects every other weekend</li> </ul>
+    <ul style="font-size:20px;"><li>3 year Varsity Basketball Player, captian Senior year</li>
+        <li>Created a program that allowed for advanced statistics on basketball games to be kept, like best lineups in terms of plus minus</li>Vice President of Future Business Leaders of America<li>Helped create a Science program where students from a local middle school would participate in fun Stem projects every other weekend</li> </ul>
     <br>
     <h3 style="font-size:30px;"><a  href="https://www.cmu.edu/" class="txtlink" id = "CMU">Carnegie Mellon University</a></h3>
     <h3 style="font-size:20px;">Ai and Math major</h3>
@@ -54,10 +55,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <h4 style="font-size:15px;">Fall '20</h4>
         <p style="font-size:23px;"><a  href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
         <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
-        <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-295-Competition-Programming-and-Problem-Solving">15-295: Competition Programming and Problem Solving</a></p>
         <p style="font-size:23px;"><a  href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: Ai, Society, and Humanity</a></p>
         <h3>Other Info:</h3>
-    <ul style="font-size:20px;"><li><a  href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li><li>Club Basketball Player '19</li><li>Member of Kappa Sigma, Fraternity on Campus</li><li>Member of the Origami Club</li></ul>
+    <ul style="font-size:20px;"><li><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151</a> Teaching Assistant</li><li><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251</a> Course Tutor</li><li><a  href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li><li>Club Basketball Player '19</li><li>Member of Kappa Sigma, Fraternity on Campus</li><li>Member of the Origami Club</li></ul>
     <br>
         <h3 style="font-size:30px;"><a  href="https://www.fcagroup.com/en-US/Pages/home.aspx" class="txtlink" id = "FCA">Fiat Chrysler Automobiles Internship</a></h3>
  <h3 style="font-size:15px;">Summer 2020</h3>
@@ -140,6 +140,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     make an AI that can smartly solve a sudoku board, and rudimentary neural nets from scratch(No libraries allowed!)</p>
         <p style="font-size:20px;" class="tab"> In the Fall of 2020, I am TAing 15-151: Mathematical Foundations for Computer Science at CMU, an introductory
         discrete math course that all freshman computer science majors have to take, and I'm planning to TA more classes in the future!</p>
+    <h3 style="font-size:30px;">Teaching At A Collegiate Level:</h3>
+    <p style="font-size:20px;" class="tab">After my freshman year at Carnegie Mellon, I knew that I wanted to go into teaching at a Collegiate level. While this was informal in my first year, through simply helping out my peers with coursework that
+    we were both taking at the same time, my Sophmore year I decided to become a TA in 15-151, Carnegie Mellon's introductory discrete math course, and a tutor for 15-251, Carnegie Mellon's discrete math/proof course for computer
+    scientists. I chose 15-151 specifically since it is a course taught to school of computer science freshman, in molds how the view problems and problem solving, and how to handle college classes in general.</p>
             <h3 style="font-size:35px;" id = "Origamii">Origami</h3>
         <h3 style="font-size:30px;">Models</h3>
     <p style="font-size:20px;" class="tab" >I've been folding origami for over a decade now, and over time I've been able to become skilled enough to fold some great models. Nowadays I do most of my folding at CMU's origami club.
@@ -166,7 +170,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                     <a  href="https://www.linkedin.com/in/maxwell-jones-636393190/">
               <i class="fa fa-linkedin w3-hover-opacity" style="font-size:45px">     </i></a>
                                       <a  href="https://www.instagram.com/maxwelljones14/">
-                                          <i class="fa fa-instagram w3-hover-opacity" style="font-size:45px">     </i></a>
+                                          <i class="fa fa-instagram w3-hover-opacity" style="font-size:45px">   </i></a>
   <!-- End footer --></div>
 
 
