--- a/Help.html
+++ b/Help.html
@@ -168,7 +168,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <div id="line3" >
               <a  href="https://github.com/maxwelljones14">
       <i class="fa fa-github w3-hover-opacity" style="font-size:45px"></i>     </a>
-                    <a  href="https://www.linkedin.com/in/maxwell-jones-636393190/">
+                    <a  href="https://www.linkedin.com/in/maxwelljones14/">
               <i class="fa fa-linkedin w3-hover-opacity" style="font-size:45px">     </i></a>
                                       <a  href="https://www.instagram.com/maxwelljones14/">
                                           <i class="fa fa-instagram w3-hover-opacity" style="font-size:45px">   </i></a>
