--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   </a>
   <div class="w3-bar-block w3-center">
     <a href="#" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Home</a>
-      <a href="#education" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Education</a>
+      <a href="#education" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Education/Experience</a>
     <a href="#portfolio" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Projects</a>
           <a href="#hobbies" class="w3-bar-item w3-button w3-text-grey w3-hover-black" onclick="closeNav()">Hobbies</a>
 
@@ -85,6 +85,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                             <img src="images/FCA.jpg" style="width:100%" height="300">
         <span class="w3-xlarge">Fiat Chrysler Automobiles</span><br>
                                             <a href="Help.html#FCA" >
+                                                <button class="w3-button" type = "button" >learn more</button></a>
+      </div>
+        <div class="w3-third w3-section">
+                            <img src="images/Facebook.png" style="width:100%" height="300">
+        <span class="w3-xlarge">Facebook</span><br>
+                                            <a href="Help.html#Facebook" >
                                                 <button class="w3-button" type = "button" >learn more</button></a>
       </div>
     </div>
