--- a/Help.html
+++ b/Help.html
@@ -41,8 +41,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <li>Created a program that allowed for advanced statistics on basketball games to be kept, like best lineups in terms of plus minus</li>Vice President of Future Business Leaders of America<li>Helped create a Science program where students from a local middle school would participate in fun Stem projects every other weekend</li> </ul>
     <br>
     <h3 style="font-size:30px;"><a  href="https://www.cmu.edu/" class="txtlink" id = "CMU">Carnegie Mellon University</a></h3>
-    <h3 style="font-size:20px;">Ai and Math major</h3>
-    <h3>2019 - 2023, 4.0/4.0
+    <h3 style="font-size:20px;">AI and Math double major</h3>
+        <h3 style="font-size:20px;">Note: Links to courses may be outdated as each subsequent semester course syllabuses/descriptions change</h3>
+    <h3>2019 - 2023, GPA: 4.0/4.0
     </h3>
         <h3>Relevant Courses:</h3>
     <h4 style="font-size:15px;">Fall '19</h4>
@@ -57,12 +58,23 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <p style="font-size:23px;"><a  href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
         <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
         <p style="font-size:23px;"><a  href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: Ai, Society, and Humanity</a></p>
-        <h3>Other Info:</h3>
-    <ul style="font-size:20px;"><li><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151</a> Teaching Assistant</li><li><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251</a> Course Tutor</li><li><a  href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li><li>Club Basketball Player '19</li><li>Member of Kappa Sigma, Fraternity on Campus</li><li>Executive Board member of the Origami Club</li></ul>
+        <h4 style="font-size:15px;">Spring '21</h4>
+        <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~./15281/">15-281: Artificial Intelligence: Representation and Problem Solving</a></p>
+        <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~ninamf/courses/315sp19/">10-315: Introduction to Machine Learning</a></p>
+        <p style="font-size:23px;"><a  href = "http://www.math.cmu.edu/~jmackey/math484/gt.html">21-484: Graph Theory</a></p>
+
+    <h3>Other Info:</h3>
+    <ul style="font-size:20px;"><li><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151</a> Teaching Assistant(Fall 2020)</li>
+        <li><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251</a> Course Tutor(Fall 2020), Teaching Assistanct(Spring 2021)</li>
+        <li><a  href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li>
+        <li>Club Basketball Player '19</li>
+        <li>Member of Kappa Sigma, Fraternity on Campus</li>
+        <li>Executive Board member of the Origami Club(2020-2021 Year)
+        </li></ul>
     <br>
-        <h3 style="font-size:30px;"><a  href="https://www.fcagroup.com/en-US/Pages/home.aspx" class="txtlink" id = "FCA">Fiat Chrysler Automobiles Internship</a></h3>
+        <h3 style="font-size:30px;" id = "FCA">Fiat Chrysler Automobiles Internship</></h3>
  <h3 style="font-size:15px;">Summer 2020</h3>
-        <h3 style="font-size:20px;"><b>Problem: </b>Every day, workers don't show up to manufacturing plants wihout notice, forcing managers to estimate how many temporary workers to hire each day in order to keep the plant running at 100% efficiency</h3>
+        <h3 style="font-size:20px;"><b>Problem: </b>Every day, workers don't show up to manufacturing plants without notice, forcing managers to estimate how many temporary workers to hire each day in order to keep the plant running at 100% efficiency</h3>
     <h3 style="font-size:20px;"><b>My Specific Goal: </b>Improve the model already in place that predicts the amount of absenteeism on any given day at a given plant</h3>
     <h3>Solution(Use of Meta Analysis):</h3>
     <ul style="font-size:20px;">
@@ -70,7 +82,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <li>cross referencing plant data adds stability to each individual model</li>
         <li>Tentative results looked promising, project continued by data science team after I left</li>
     </ul>
-    <h3 style="font-size:30px;">Origami Social Networking<a  href="https://user.tjhsst.edu/2019mjones/csslogin.html" class="txtlink" id = "Origami">(Link to Website) </a></h3>
+        <br>
+    <h3 style="font-size:30px;"id = "Facebook">Facebook Internship</a></h3>
+ <h3 style="font-size:15px;">Summer 2021</h3>
+        <h3 style="font-size:20px;">Right now I am planning on interning at Facebook in Summer of 2021. I will update this section after the internship is complete</h3>
+    <br>
+    <h3 style="font-size:30px;">Origami Social Networking</h3>
         <h3 style="font-size:20px;"><b>Problem</b>: There is no platform for small origamists to meet and share origami models</h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Create a website where origamists can share their work with each other</h3>
     <h3>Features:</h3>
@@ -79,6 +96,9 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <li>Users able to upload and delete new photos of origami, and pursue other user's photos</li>
         <li>Created a python script along with website allowing for users to create Origami crease patterns and download them from a python script</li>
     </ul>
+        <br>
+
+
 
     <h3 style="font-size:30px;" id = "WS"><a  href="https://github.com/jasonchadwick/WalkSafe" class="txtlink" >WalkSafe </a>(TartanHacks 2020 project)</h3>
             <h3 style="font-size:20px;"><b>Partners</b>: <a  href="https://www.linkedin.com/in/tanvi-bhargava-2b23060/">Tanvi  Bhargava</a>, <a  href="https://www.linkedin.com/in/jasonchadwick/">Jason Chadwick</a>, <a  href="https://www.linkedin.com/in/adriankager/">Adrian Kager</a></h3>
@@ -92,6 +112,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 </div>
     <div class="w3-half w3-section"><img src="images/Manhatten.jpg" align="center" width="300" height="300"><br><p>Heatmap of Manhatten, with red/brighter areas representing more crime</p></div>
        <div class="w3-section" ><img src="images/path.jpg"><br><p>Optimal Path in green overlayed by heat map of crime</p></div>
+    <br>
 
         <h3 id = "linear" style="font-size:30px;">Predicting Football with Linear Algebra<a  href="Linear.pdf" class="txtlink" >(Full Paper)</a></h3>
     <h3 style="font-size:20px;"><b>Partner</b>: <a  href="https://www.linkedin.com/in/eric-gan-cmu/">Eric Gan</a></h3>
@@ -108,10 +129,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <li>Able to predict superbowl winner as first or second best team for all three years tested on (2010, 2011, 2013)</li>
         <li>Able to predict upsets, when higher seeded teams lost early on</li>
     </ul>
+    <br>
 
     <h3 style="font-size:30px;" id="Rail">ARailRoads</h3>
         <h3 style="font-size:20px;"> Simple implementation of A*. Given two cities, finds the fastest route by train, animating the process of finding the route. Here's an example path from Seattle to Miami:</h3>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/sPqFJk4PgJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <h3 style="font-size:35px;" id = "Teach">Teaching</h3>
+
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/sPqFJk4PgJg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    <h3 style="font-size:35px;" id = "Teach">Teaching</h3>
     <h3 style="font-size:30px;" id="TeachOrigami">Teaching Origami Across the World:</h3>
         <p style="font-size:20px;" class="tab" id="Tpart1">My first experience with teaching came when I was in eighth grade, and I taught a week long camp on origami to some middle schoolers.
             We learned how to fold a simple five-fold cup, then went on the more advanced models like a heart and a crane. It was a great experience and
@@ -125,6 +148,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
                                                                <img src="images/Origami2.jpg" width="300" height="300"><br><p >Me in 9th grade teaching origami to kids in Kenya</p></div>
     <div class="w3-third w3-section">
                                        <img src="images/Origami1.jpg" width="300" height="300"><br><p >Me in 10th grade teaching origami to kids in Myanmar</p></div>
+    <br>
 
     <h3 style="font-size:30px;">Teaching Math and Science to younger students:</h3>
             <p style="font-size:20px;" class="tab" id="Tpart2">I wanted to take my newfound interest in teaching further, so in high school I joined a program where
