--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <!-- Grid for photos -->
     <div class="w3-row-padding" style="margin:0 -16px">
+                <a  href="Help.html#Battlecode">
+        <div class="w3-button button2">
+        <img src="images/BattleCode.png" style="width:100%"></div>
+                                        </a>
       <div class="w3-half">
                     <a   href="Help.html#Origami">
                     <div class="w3-button button2">
