--- a/Help.html
+++ b/Help.html
@@ -87,7 +87,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
  <h3 style="font-size:15px;">Summer 2021</h3>
         <h3 style="font-size:20px;">Right now I am planning on interning at Facebook in Summer of 2021. I will update this section after the internship is complete</h3>
     <br>
-    <h3 id = "Battlecode" style="font-size:30px;">BattleCode (<a  href="https://github.com/BSreenivas0713/Battlecode2021" >Full Code</a> | Full Post Mortem)</h3>
+    <h3 id = "Battlecode" style="font-size:30px;">BattleCode (<a  href="https://github.com/BSreenivas0713/Battlecode2021" >Full Code</a> | <a href="BattleCode2021.pdf">Full Post Mortem</a> )</h3>
     <h3 style="font-size:20px;"><b>Partners</b>: <a  href="https://www.linkedin.com/in/winston-cheung/">Winston Cheung</a>, <a  href="https://www.linkedin.com/in/david-lyons-cmu/">David Lyons</a>, <a  href="https://www.linkedin.com/in/bsreenivas/">Bharath Sreenivas</a></h3>
     <h3 style="font-size:20px;"><b>General Overview</b>: Battlecode is an MIT AI competition run every year throughout the month of January. At the beginning of the month, they release a new 2 player game in java, at which point teams have to code up a bot that plays said game. There are multiple Tournaments throughout the month, ending in a tournament for the top 16 teams out of the hundreds that submit code for cash prizes</h3>
     <h3>Overview of 2020 Battlecode Implementation(3 Musketeers)</h3>
