updated so origami link works, linked github also

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <img src="images/BattleCode.png" style="width:100%"></div>
                                         </a>
       <div class="w3-half">
-                    <a   href="Help.html#Origami">
+                    <a   href="Help.html#SocialNetworking">
                     <div class="w3-button button2">
                         <img src="images/Origami.png" style="width:100%"></div></a>
                               <a   href="Help.html#linear">
