--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
           <p>Double Major in AI and Math</p>
     <img src="/images/profile_pic.jpg" class="w3-image w3-hide-large w3-hide-small w3-round" style="display:block;width:60%;margin:auto;">
     <img src="/images/profile_pic.jpg" class="w3-image w3-hide-large w3-hide-medium w3-round" width="1000" height="1333">
-    <a href="Resume_doc.pdf">
+    <a href="Maxwell_Jones_Resume.pdf">
         <button class="w3-button w3-light-grey w3-padding-large w3-margin-top">
 
         <i class="fa fa-download"></i> My Resume
