--- a/Help.html
+++ b/Help.html
@@ -34,7 +34,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <h3 style="font-size:30px;"><a  href="https://tjhsst.fcps.edu/" class="txtlink" id = "TJ">Thomas Jefferson High School</a> </h3>
     <h3>2016 - 2019, 4.1 weighted GPA</h3>
     <h3>Relevant Courses:</h3>
-    <p style="font-size:20px;">AP Calculus BC, Multivariabe Calculus, Differential Equations, Complex Analysis, <br>AP Physics C Mechanics, AP Physics C Electricity and Magnetism,
+    <p style="font-size:20px;">AP Calculus BC, Multivariable Calculus, Differential Equations, Complex Analysis, <br>AP Physics C Mechanics, AP Physics C Electricity and Magnetism,
         Artificial Intelligence, <br> Web App Design, Mobile App Design, AP Economics </p>
         <h3>Other Info:</h3>
     <ul style="font-size:20px;"><li>3 year Varsity Basketball Player, captian Senior year</li>
