Fixed Hyperlink error

--- a/Help.html
+++ b/Help.html
@@ -114,7 +114,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
 
     <iframe width="560" height="315" src="https://youtube.com/embed/WZrlJAE3LKw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
-    <h3 style="font-size:30px;" id = "SocialNetworking">Origami Social Networking(<a href="https://github.com/maxwelljones14/Origami_Social_Networking" class="txtlink">Full Code)</h3>
+    <h3 style="font-size:30px;" id = "SocialNetworking">Origami Social Networking(<a href="https://github.com/maxwelljones14/Origami_Social_Networking" class="txtlink">Full Code</a>)</h3>
         <h3 style="font-size:20px;"><b>Problem</b>: There is no platform for small origamists to meet and share origami models</h3>
     <h3 style="font-size:20px;"><b>Goal</b>: Create a website where origamists can share their work with each other</h3>
     <h3>Features:</h3>
