--- a/Help.html
+++ b/Help.html
@@ -106,7 +106,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
             <li>Sometimes complex isn't always better. Some of our simplest and most easily changeable code worked best for us</li>
             <li>Careful and precise troublshooting is super important. Sometimes we had bugs that made our code severely worse that could only be found with frame by frame inspection of games</li>
             <li>Don't be afraid to gain insight from others/restart large parts of the code. Sometimes our strategy just wasn't great, and restarting with new knoledge lead to huge improvements fairly quickly</li>
-            <li>find the real problem. A lot of times we tweaked parts of our code in hopes to fix a problem that was in a completely different section. It's important to ask yourself what's wrong before trying to find optimizations to fix it.</li>
+            <li>Find the real problem. A lot of times we tweaked parts of our code in hopes to fix a problem that was in a completely different section. It's important to ask yourself what's wrong before trying to find optimizations to fix it.</li>
         </ul>
     </ul>
         <h3>Example Game:</h3>
@@ -126,7 +126,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <br>
 
 
-
+    
     <h3 style="font-size:30px;" id = "WS"><a  href="https://github.com/jasonchadwick/WalkSafe" class="txtlink" >WalkSafe </a>(TartanHacks 2020 project)</h3>
             <h3 style="font-size:20px;"><b>Partners</b>: <a  href="https://www.linkedin.com/in/tanvi-bhargava-2b23060/">Tanvi  Bhargava</a>, <a  href="https://www.linkedin.com/in/jasonchadwick/">Jason Chadwick</a>, <a  href="https://www.linkedin.com/in/adriankager/">Adrian Kager</a></h3>
     <h3 style="font-size:20px;"><b>Problem</b>: Walking alone in big cities can be risky in areas where crime is prevelent</h3>
