--- a/Help.html
+++ b/Help.html
@@ -110,7 +110,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         </ul>
     </ul>
         <h3>Example Game:</h3>
-    <p>This is a game played against Monky that we won. Monky ended up finishing 5th out of all competitors For a better idea of what's going on here, read the full post mortem linked above</p>
+    <p>This is a game played against Monky that we won. Monky ended up finishing 5th out of all competitors. For a better idea of what's going on here, read the full post mortem linked above</p>
 
     <iframe width="560" height="315" src="https://youtube.com/embed/WZrlJAE3LKw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <br>
