--- a/Help.html
+++ b/Help.html
@@ -57,22 +57,27 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <h4 style="font-size:15px;">Fall '20</h4>
         <p style="font-size:23px;"><a  href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
         <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
-        <p style="font-size:23px;"><a  href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: Ai, Society, and Humanity</a></p>
+        <p style="font-size:23px;"><a  href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: AI, Society, and Humanity</a></p>
         <h4 style="font-size:15px;">Spring '21</h4>
         <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~./15281/">15-281: Artificial Intelligence: Representation and Problem Solving</a></p>
         <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~ninamf/courses/315sp19/">10-315: Introduction to Machine Learning</a></p>
         <p style="font-size:23px;"><a  href = "http://www.math.cmu.edu/~jmackey/math484/gt.html">21-484: Graph Theory</a></p>
+    <h4 style="font-size:15px;">Fall '21</h4>
+        <p style="font-size:23px;"><a  href = "https://deeplearning.cs.cmu.edu/F21/index.html">15-485: Introduction to Deep learning</a></p>
+        <p style="font-size:23px;"><a  href = "https://www.cs.cmu.edu/~15210/">15-210: Parallel and Sequential Data Structures and Algorithms</a></p>
 
     <h3>Other Info:</h3>
-    <ul style="font-size:20px;"><li><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151</a> Teaching Assistant(Fall 2020)</li>
-        <li><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251</a> Course Tutor(Fall 2020), Teaching Assistanct(Spring 2021)</li>
+    <ul style="font-size:20px;"><li><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151</a> Teaching Assistant(Fall 2020), Head Teaching Assistant(Fall 2021)</li>
+        <li><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251</a> Course Tutor(Fall 2020), Teaching Assistant(Spring 2021, Spring 2022)</li>
         <li><a  href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li>
-        <li>Club Basketball Player '19</li>
+        <li>Club Basketball Player</li>
         <li>Member of Kappa Sigma, Fraternity on Campus</li>
         <li>Executive Board member of the Origami Club(2020-2021 Year)
+        </li>
+    <li>Chess Player, though I'm not very good
         </li></ul>
     <br>
-        <h3 style="font-size:30px;" id = "FCA">Fiat Chrysler Automobiles Internship</></h3>
+        <h3 style="font-size:30px;" id = "FCA">Fiat Chrysler Automobiles Internship</h3>
  <h3 style="font-size:15px;">Summer 2020</h3>
         <h3 style="font-size:20px;"><b>Problem: </b>Every day, workers don't show up to manufacturing plants without notice, forcing managers to estimate how many temporary workers to hire each day in order to keep the plant running at 100% efficiency</h3>
     <h3 style="font-size:20px;"><b>My Specific Goal: </b>Improve the model already in place that predicts the amount of absenteeism on any given day at a given plant</h3>
@@ -85,7 +90,12 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <br>
     <h3 style="font-size:30px;"id = "Facebook">Facebook Internship</a></h3>
  <h3 style="font-size:15px;">Summer 2021</h3>
-        <h3 style="font-size:20px;">Right now I am planning on interning at Facebook in Summer of 2021. I will update this section after the internship is complete</h3>
+        <h3 style="font-size:20px;"></h3>
+        <ul style="font-size:20px;">
+        <li>Developed a data perturbation training/evaluating/testing pipeline for the Probability: Uncertainty team.</li>
+        <li>Designed and tested probabilistic pytorch models to analyze out of distribution data recognition.</li>
+        <li>Specifically focused on MNIST and FashionMNIST datasets, comparing different model architectures</li>
+    </ul>
     <br>
     <h3 id = "Battlecode" style="font-size:30px;">BattleCode (<a  href="https://github.com/BSreenivas0713/Battlecode2021" >Full Code</a> | <a href="BattleCode2021.pdf">Full Post Mortem</a> )</h3>
     <h3 style="font-size:20px;"><b>Partners</b>: <a  href="https://www.linkedin.com/in/winston-cheung/">Winston Cheung</a>, <a  href="https://www.linkedin.com/in/david-lyons-cmu/">David Lyons</a>, <a  href="https://www.linkedin.com/in/bsreenivas/">Bharath Sreenivas</a></h3>
@@ -191,17 +201,23 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     had never seen code before, so my goal with them was to get them to think like computer scientists, and see the field as a fun new challenge instead of a daunting ocean of danger.</p>
     <p style="font-size:20px;" class="tab"> I also taught students with a solid python background some basics in AI, like Breadth and Depth First Search, how to
     make an AI that can smartly solve a sudoku board, and rudimentary neural nets from scratch(No libraries allowed!)</p>
-        <p style="font-size:20px;" class="tab"> In the Fall of 2020, I am TAing 15-151: Mathematical Foundations for Computer Science at CMU, an introductory
-        discrete math course that all freshman computer science majors have to take, and I'm planning to TA more classes in the future!</p>
+
     <h3 style="font-size:30px;">Teaching At A Collegiate Level:</h3>
     <p style="font-size:20px;" class="tab">After my freshman year at Carnegie Mellon, I knew that I wanted to go into teaching at a Collegiate level. While this was informal in my first year, through simply helping out my peers with coursework that
-    we were both taking at the same time, my Sophmore year I decided to become a TA in 15-151, Carnegie Mellon's introductory discrete math course, and a tutor for 15-251, Carnegie Mellon's discrete math/proof course for computer
-    scientists. I chose 15-151 specifically since it is a course taught to school of computer science freshman, in molds how the view problems and problem solving, and how to handle college classes in general.</p>
+    we were both taking at the same time, my Sophomore year I decided to become a TA in 15-151, Carnegie Mellon's introductory discrete math course.
+        I chose 15-151 specifically since it is a course taught to school of computer science freshman, in molds how the view problems and problem solving, and how to handle college classes in general.</p>
+    <p style="font-size:20px;" class="tab"> The next Spring, I TAed 15-251: Great Theoretical ideas in Computer Science. This class teaches things like graph theory, Turing machines, Randomized/Approximation algorithms, etc...
+            In Fall 2021, I was one of the head TAs for 15-151, and I am planning on TAing 251 again in the spring!</p>
             <h3 style="font-size:35px;" id = "Origami">Origami</h3>
         <h3 style="font-size:30px;">Models</h3>
     <p style="font-size:20px;" class="tab" >I've been folding origami for over a decade now, and over time I've been able to become skilled enough to fold some great models. Nowadays I do most of my folding at CMU's origami club.
-        Here are some of my favorites from my <a  href="https://www.instagram.com/origami__wonders/">Origami Instagram Page</a>: </p>
-<div class="w3-third w3-section">
+        Here are some of my favorites from my <a  href="https://www.instagram.com/maxwelljonesorigami/">Origami Instagram Page</a>: </p>
+    <div class="w3-third w3-section">
+<img src="images/Dragon.png" width="300" height="300"><br><p align="center">Dragon</p></div>
+<div class="w3-third w3-section"><img src="images/Buddha.png" width="300" height="300"><br><p align="center">Buddha</p></div>
+    <div class="w3-third w3-section"><img src="images/Owl.png" width="300" height="300"><br><p align="center">Owl</p></div>
+
+    <div class="w3-third w3-section">
 <img src="images/turtle.jpg" width="300" height="300"><br><p align="center">Turtle</p></div>
 <div class="w3-third w3-section"><img src="images/SeaScorpio.jpg" width="300" height="300"><br><p align="center">Sea scorpion</p></div>
     <div class="w3-third w3-section"><img src="images/Fluffy.jpg" width="300" height="300"><br><p align="center">Cerberus, three headed dog</p></div>
