--- a/Help.html
+++ b/Help.html
@@ -41,33 +41,39 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
         <li>Created a program that allowed for advanced statistics on basketball games to be kept, like best lineups in terms of plus minus</li>Vice President of Future Business Leaders of America<li>Helped create a Science program where students from a local middle school would participate in fun Stem projects every other weekend</li> </ul>
     <br>
     <h3 style="font-size:30px;"><a  href="https://www.cmu.edu/" class="txtlink" id = "CMU">Carnegie Mellon University</a></h3>
-    <h3 style="font-size:20px;">AI and Math double major</h3>
+    <h3 style="font-size:20px;"><b>AI and Math double major</b></h3>
         <h3 style="font-size:20px;">Note: Links to courses may be outdated as each subsequent semester course syllabuses/descriptions change</h3>
     <h3>2019 - 2023, GPA: 4.0/4.0
     </h3>
         <h3>Relevant Courses:</h3>
-    <h4 style="font-size:15px;">Fall '19</h4>
-    <p style="font-size:23px;"><a  href = "https://www.math.cmu.edu/~handron/21_241/index.html">21-241: Matrix Algebra</a></p>
-        <p style="font-size:23px;"><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151: Mathematical Foundations for Computer Science</a></p>
-    <p style="font-size:23px;"><a  href="https://csd.cs.cmu.edu/course-profiles/15-122-principles-imperative-computation">15-122: Principles of Imperative Computation</a></p>
-    <h4 style="font-size:15px;">Spring '20</h4>
-        <p style="font-size:23px;"><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251: Great Theoretical Ideas in Computer Science</a></p>
-        <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-150-Principles-of-Functional-Programming">15-150: Principles of Functional Programming</a></p>
-        <p style="font-size:23px;"><a  href = "http://www.math.cmu.edu/~handron/21_259/index.html">21-259: Calculus in Three Dimensions</a></p>
-        <h4 style="font-size:15px;">Fall '20</h4>
-        <p style="font-size:23px;"><a  href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
-        <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
-        <p style="font-size:23px;"><a  href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: AI, Society, and Humanity</a></p>
-        <h4 style="font-size:15px;">Spring '21</h4>
-        <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~./15281/">15-281: Artificial Intelligence: Representation and Problem Solving</a></p>
-        <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~ninamf/courses/315sp19/">10-315: Introduction to Machine Learning</a></p>
-        <p style="font-size:23px;"><a  href = "http://www.math.cmu.edu/~jmackey/math484/gt.html">21-484: Graph Theory</a></p>
-    <h4 style="font-size:15px;">Fall '21</h4>
+        <h4 style="font-size:15px;"><b>Spring '22</b></h4>
+        <p style="font-size:23px;"><a  href = "https://www.cs.cmu.edu/~15210/">16-384: Computer Vision</a></p>
+        <p style="font-size:23px;"><a  href = "https://www.cs.cmu.edu/~15210/">10-725: Convex Optimization</a></p>
+
+        <h4 style="font-size:15px;"><b>Fall '21</b></h4>
         <p style="font-size:23px;"><a  href = "https://deeplearning.cs.cmu.edu/F21/index.html">15-485: Introduction to Deep learning</a></p>
         <p style="font-size:23px;"><a  href = "https://www.cs.cmu.edu/~15210/">15-210: Parallel and Sequential Data Structures and Algorithms</a></p>
 
+        <h4 style="font-size:15px;"><b>Spring '21</b></h4>
+        <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~./15281/">15-281: Artificial Intelligence: Representation and Problem Solving</a></p>
+        <p style="font-size:23px;"><a  href = "http://www.cs.cmu.edu/~ninamf/courses/315sp19/">10-315: Introduction to Machine Learning</a></p>
+        <p style="font-size:23px;"><a  href = "http://www.math.cmu.edu/~jmackey/math484/gt.html">21-484: Graph Theory</a></p>
+        <h4 style="font-size:15px;"><b>Fall '20</b></h4>
+        <p style="font-size:23px;"><a  href = "http://math.cmu.edu/~sevakm/teaching/fall12pt.html">21-325: Probability</a></p>
+        <p style="font-size:23px;"><a  href = "https://csd.cs.cmu.edu/course-profiles/15-213-Introduction-to-Computer-Systems">15-213: Introduction to Computer Systems</a></p>
+        <p style="font-size:23px;"><a  href = "http://coursecatalog.web.cmu.edu/schools-colleges/schoolofcomputerscience/artificialintelligence/#curriculumtextcontainer">80-249: AI, Society, and Humanity</a></p>
+        <h4 style="font-size:15px;"><b>Spring '20</b></h4>
+        <p style="font-size:23px;"><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251: Great Theoretical Ideas in Computer Science</a></p>
+        <p style="font-size:23px;"><a  href = "http://www.math.cmu.edu/~handron/21_259/index.html">21-259: Calculus in Three Dimensions</a></p>
+            <h4 style="font-size:15px;"><b>Fall '19</b></h4>
+    <p style="font-size:23px;"><a  href = "https://www.math.cmu.edu/~handron/21_241/index.html">21-241: Matrix Algebra</a></p>
+        <p style="font-size:23px;"><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151: Mathematical Foundations for Computer Science</a></p>
+    <p style="font-size:23px;"><a  href="https://csd.cs.cmu.edu/course-profiles/15-122-principles-imperative-computation">15-122: Principles of Imperative Computation</a></p>
+
+
+
     <h3>Other Info:</h3>
-    <ul style="font-size:20px;"><li><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151</a> Teaching Assistant(Fall 2020), Head Teaching Assistant(Fall 2021)</li>
+    <ul style="font-size:20px;"><li><a  href="https://csd.cs.cmu.edu/course-profiles/15-151-Mathematical-Foundations-for-Computer-Science">15-151</a> Teaching Assistant(Fall 2020), Head Teaching Assistant(Fall 2021, 2022)</li>
         <li><a  href = "https://www.csd.cs.cmu.edu/course-profiles/15-251-Great-Theoretical-Ideas-in-Computer-Science">15-251</a> Course Tutor(Fall 2020), Teaching Assistant(Spring 2021, Spring 2022)</li>
         <li><a  href="https://thebridge.cmu.edu/organization/spirit">SPIRIT</a> Treasurer 2020-2021 School Year</li>
         <li>Club Basketball Player</li>
