--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
                     <h1>Hi! I'm Maxwell :)</h1>
                     <p>AI & Math Double Major @ <a class="text" href="https://www.cs.cmu.edu/">CMU</a></p>
                     <br>
-                    <p style="font-size:20px ;"><strong>I'm currently a senior researching under <a class="text"
+                    <p style="font-size:20px ;"><strong>I'm currently an incoming <a class="text"
+                                href="https://www.ml.cmu.edu/academics/5th-year-ms.html">CMU
+                                MSML</a> student researching under <a class="text"
                                 href="https://www.cs.cmu.edu/~junyanz/">Jun-Yan Zhu</a> in the Generative Intelligence
-                            Lab
-                            as well as <a class="text" href="http://www.cs.cmu.edu/~ninamf/">Nina Balcan</a> on
-                            Theoretical Semi-Supervised Learning. I'm also a head TA for <a class="text"
+                            Lab.
+                            I'm also a head TA for <a class="text"
                                 href="https://www.math.cmu.edu/~jmackey/151_128/welcome.html">15-151</a> Concepts of
                             Mathematics.</strong>
                     <p><br>
@@ -64,7 +65,14 @@
                     <tbody>
                         <td><strong style="font-size:40pt;">Education</strong></td>
                         <tr>
-                            <td class="col-md-3">Sept 2019 - June 2023</td>
+                            <td class="col-md-3">Sept 2023 - May 2024</td>
+                            <td>
+                                <strong>Masters of Science in Machine Learning</strong>
+                                <br> Carnegie Mellon University
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-3">Sept 2019 - May 2023</td>
                             <td>
                                 <strong>Bachelors in Artificial Intelligence and Math</strong>
                                 <br> Carnegie Mellon University <a class="text" href="#courses"
@@ -132,7 +140,8 @@
                             </td>
                         </tr>
                         <td style="font-size:15pt;"><strong style="font-size:40pt;">Teaching</strong>
-                            <br><strong>Carnegie Mellon University</strong> </td>
+                            <br><strong>Carnegie Mellon University</strong>
+                        </td>
 
                         <tr>
                             <td class="col-md-3">Fall 2022</td>
@@ -202,7 +211,16 @@
                 <a href="#work"
                     style="margin-top: 1px;margin-right: 10px;position:absolute;top:5px;left:15px;border-bottom:none;font-size:75px;">&laquo;</a>
                 <h1>Selected Coursework</h1>
-                <h4><b><br>Fall '22</b></h4>
+                <h4><b><br>Spring '23</b></h4>
+                <ul>
+                    <li style="font-size:23px;"><a class="text"
+                            href="http://www.cs.cmu.edu/afs/cs.cmu.edu/academic/class/15494-s23/">15-494: Cognitive
+                            Robotics</a></li>
+                    <li style="font-size:23px;"><a class="text"
+                            href="https://www.math.cmu.edu/~jmackey/math301/syll.html">10-301:
+                            Combinatorics</a></li>
+                </ul>
+                <h4><b>Fall '22</b></h4>
                 <ul>
                     <li style="font-size:23px;"><a class="text"
                             href="https://cmudeeprl.github.io/703website_f22/">10-703: Deep Reinforcement Learning and
@@ -263,6 +281,13 @@
                                 run by MIT</p>
                         </div>
                         <div class="col-4 col-6-medium col-12-small">
+                            <a href="#depth" class="image fit"><img src="images/living_room_depth_map.png" alt=""></a>
+                            <p style="text-align:center"><b>Cozmo Depth Map!</b><br>Final Project for <a class="text"
+                                    href="http://www.cs.cmu.edu/afs/cs.cmu.edu/academic/class/15494-s23/">Cognitive
+                                    Robotics</a>
+                            </p>
+                        </div>
+                        <div class="col-4 col-6-medium col-12-small">
                             <a href="#spotify" class="image fit"><img src="images/spotify.jpg" alt=""></a>
                             <p style="text-align:center"><b>Spot your mood!</b><br>Hackathon project for spotify song
                                 recomendations</p>
@@ -303,6 +328,47 @@
                                     transition: width .15s ease-in-out, padding-right .15s ease-in-out;"><span>
 
                 </a>
+            </article>
+
+            <article id="depth" class="panel">
+                <header>
+                    <h1>Cozmo Depth Map! <br><br></h1>
+                    <h2>[<a href="http://www.cs.cmu.edu/afs/cs.cmu.edu/academic/class/15494-s23/demo-slides/arburra.pdf"
+                            class="text">presentation slides</a>] [<a
+                            href="https://github.com/maxwelljones14/Cog_Robo_Final_Project" class="text">codebase</a>]
+                    </h2>
+                </header>
+                <img src="images/3_cubes.png" alt=""
+                    style="height:400px;width:auto;display:block;margin-left:auto;margin-right:auto;" class="center">
+                <a href="#projects"
+                    style="margin-top: 1px;margin-right: 10px;position:absolute;top:5px;left:15px;border-bottom:none;font-size:75px;">&laquo;</a>
+                <h3 style="font-size:20px;"><b>Partner</b>: <a class="text"
+                        href="https://www.linkedin.com/in/arburra/">Akshath Burra</a></h3>
+                <p><br><strong>my Senior year I took <a class="text"
+                            href="http://www.cs.cmu.edu/afs/cs.cmu.edu/academic/class/15494-s23/">Cognitive
+                            Robotics</a>, a course in which you program <a class="text"
+                            href="https://www.digitaldreamlabs.com/products/cozmo-robot">Cozmo</a>, a robot with a
+                        camera sensor.
+                        Thanks to CMU, cozmo also had access to a ~8 GB GPU. For our final project, me and my partner
+                        Akshath and I decided to use <a class="text" href="https://github.com/isl-org/MiDaS">MiDaS</a>,
+                        a monocular depth model,
+                        to predict depth at every frame that Cozmo sees. <br><br>Since MiDaS only gives relative depth,
+                        this depth map is not grounded wiith real world depth values. However, when Cozmo sees a
+                        <b>light cube</b>, a special object with an aruco marker,
+
+                        he knows how far away this light cube is. Using light cubes as a sparse depth signal, we
+                        calculate an optimal scaling factor to multiply to the relative MiDaS depth map to give an
+                        accurate depth map of the image, which
+                        can then be queried at any pixel. Feel free to look at the slides linked above for a full
+                        explanation and proof of optimality for our scaling factor! <br><br>
+
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/sjX_GxfMVb0"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen></iframe>
+
+                </p></strong>
+
             </article>
 
             <article id="battlecode" class="panel">
