--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <article id="home" class="panel intro">
                 <header>
                     <h1>Hi! I'm Maxwell :)</h1>
-                    <p>AI & Math Double Major @ <a class="text" href="https://www.cs.cmu.edu/">CMU</a></p>
+                    <p>Incoming Masters Student @ <a class="text" href="https://www.cs.cmu.edu/">CMU</a></p>
+                    <p>Former AI & Math Double Major @ <a class="text" href="https://www.cs.cmu.edu/">CMU</a></p>
                     <br>
                     <p style="font-size:20px ;"><strong>I'm currently an incoming <a class="text"
                                 href="https://www.ml.cmu.edu/academics/5th-year-ms.html">CMU
