--- a/index.html
+++ b/index.html
@@ -350,11 +350,11 @@
                             Robotics</a>, a course in which you program <a class="text"
                             href="https://www.digitaldreamlabs.com/products/cozmo-robot">Cozmo</a>, a robot with a
                         camera sensor.
-                        Thanks to CMU, cozmo also had access to a ~8 GB GPU. For our final project, me and my partner
+                        Thanks to CMU, cozmo also had access to a ~8 GB GPU. For our final project, my partner
                         Akshath and I decided to use <a class="text" href="https://github.com/isl-org/MiDaS">MiDaS</a>,
                         a monocular depth model,
                         to predict depth at every frame that Cozmo sees. <br><br>Since MiDaS only gives relative depth,
-                        this depth map is not grounded wiith real world depth values. However, when Cozmo sees a
+                        this depth map is not grounded with real world depth values. However, when Cozmo sees a
                         <b>light cube</b>, a special object with an aruco marker,
 
                         he knows how far away this light cube is. Using light cubes as a sparse depth signal, we
