--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                     src="images/bias_amplification_curve.png" style="width:250px;vertical-align:top;">
                             </td>
 
-                            <td class="col-md-3"><strong>A Systemic Study of Bias Amplification</strong><br>
+                            <td class="col-md-3"><strong>A Systematic Study of Bias Amplification</strong><br>
                                 <a class="text" href="https://scholar.google.com/citations?hl=en&user=DcfHZoUAAAAJ"
                                     style="font-size: 15px;">Melissa Hall</a>, <a class="text" style="font-size: 15px;"
                                     href="https://lvdmaaten.github.io/">Laurens Van der Maaten</a>, <a class="text"
@@ -117,6 +117,15 @@
                         </tr>
 
                         <td><strong style="font-size:40pt;">Experience</strong></td>
+                        </tr>
+                        <tr>
+                            <td class="col-md-3">Summer 2023</td>
+                            <td>
+                                <strong>Academic Research</strong>
+                            <td class="col-md-3"> <a class="text" href="https://www.cs.cmu.edu/~junyanz/">Generative
+                                    Intelligence Lab</a> - CMU</td>
+                            <br>
+                            </td>
                         </tr>
                         <tr>
                             <td class="col-md-3">Summer 2022</td>
@@ -634,7 +643,7 @@
             <article id="contact" class="panel">
                 <header>
                     <h2>Email: </h2>
-                    <p>mjones2@andrew.cmu.edu</p>
+                    <p>mjones2 [at] andrew [dot] cmu [dot] edu</p>
                 </header>
             </article>
 
